# [tool.poetry]
# name = "tspgclu"
# version = "0.1.0"
# description = "The TSPg software approximates Ward's agglomerative clustering"
# authors = ["Sami Sieranoja <sami.sieranoja@gmail.com>"]
# license = "MIT"
# readme = "README.md"
# packages = [
    # { include = "tspgclu" },
    # { include = "src/*.py" },
# ]
# build = "build.py"

# [tool.poetry.dependencies]
# python = ">=3.9"
# numpy = "^1.25.2"


[build-system]
requires = [
    "setuptools>=42",
    "pybind11>=2.10.0",
    "numpy >= 1.15"
]
build-backend = "setuptools.build_meta"

[tool.cibuildwheel]
test-command = "python {project}/tests/test.py"
test-skip = "*universal2:arm64"

[tool.ruff]
extend-select = [
  "B",   # flake8-bugbear
  "I",   # isort
  "PGH", # pygrep-hooks
  "RUF", # Ruff-specific
  "UP",  # pyupgrade
]
extend-ignore = [
  "E501",   # Line too long
]
target-version = "py37"


# [build-system]
# requires = ["poetry-core"]
# build-backend = "poetry.masonry.api"
# requires = ["poetry>=0.12", "setuptools", "wheel", "setuptools-cpp"]
# build-backend = "poetry.core.masonry.api"
